[package]
name = "autobrightd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.192"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
gtk = "0.18.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
tray-item = { version = "0.9.0", features = ["libappindicator"]}
